fix: removed z-index from sticky UI element

--- a/desktop/src/components/pattern-list/pattern-list.css
+++ b/desktop/src/components/pattern-list/pattern-list.css
@@ -12,7 +12,6 @@
   padding: 8px 0;
   margin: -8px 0 0 0;
   background-color: var(--bg-color);
-  z-index: 1;
 }
 
 .pattern-list-wrapper > .no-results {
